index.css
/*   structural bits   */
*{
    margin: 0px auto;
    font-family: "Lucida Console", monaco;
}
html, body{
    scroll-behavior: smooth;
    transition: 5s;
}
/* global bits */
hr{
  width: 20%;
  background-color: #000000;
  border: 0 none;
  height: 1px;
}
h3{
  font-size: 24pt;
  font-weight:900;
}
h2{
  text-align: left !important;
  margin: 0px !important;
}
p{
  text-align: justify;
}
iframe{
  height: 100%;
}
/* page structure */
@media only screen and (max-device-width : 640px) {
  #bodyGrid{
    grid-template-columns: auto !important;
    grid-template-rows: auto auto !important;
  }
  /* menu bits */
  #menuContainer{
    position: static !important;
    width: 100vw !important;
    height: auto !important;
    grid-row: 1 !important;
    grid-template-columns: 50vw 50vw !important;
    grid-template-rows: auto !important;
    border-bottom-style: solid !important;
  }
  #menu{
    grid-row: 1 !important;
    grid-column: 1 !important;
  }
  #footer{
    grid-row: 1 !important;
    grid-column: 2 !important;
  }
  #pageGrid{
    grid-row: 2 !important;
    grid-column: 1 !important;
  }
  .radioGrid{
    grid-template-columns: auto !important;
    grid-template-rows: auto auto repeat(5,minmax(32px,auto) auto auto auto) !important;
  }
}
#bodyGrid{
  display: grid;
  grid-template-columns: 240px auto;
  grid-template-rows: auto;
}
/* menu bits */
#menuContainer{
  position: fixed;
  width: 240px;
  height: 100vh;
  grid-column: 1;
  border-right-style: solid;
  border-width: 1px;
  display: grid;
  grid-template-columns: auto;
  grid-template-rows: 15vh 70vh 15vh;
}
.menuText{
  color: black;
  text-decoration: none;
}
.menuText:hover{
  color:white;
}
#menu{
  grid-row: 1;
  margin: 10px !important;
  padding: 10px !important;
}
#footer{
  grid-row: 3;
  margin: 10px !important;
  padding: 10px !important;
}
/* page bits */
#pageGrid{
  grid-column: 2;
  display: grid;
  grid-template-columns: auto;
  grid-template-rows: auto;
}
.youtube{
  min-height: 800px;
  margin-bottom: 20px;
}
.content{
  padding: 20px;
}
.aboutGrid{
  display: grid;
  grid-template-columns: auto auto;
  grid-template-rows: auto auto auto;
  grid-gap: 20px;
}
.radioGrid{
  display: grid;
  grid-template-columns: 30% auto;
  grid-template-rows: auto auto repeat(6,minmax(32px,auto) minmax(200px,auto) auto);
  grid-gap: 20px;
}
.soundGrid{
  display: grid;
  grid-template-columns: 30% auto;
  grid-template-rows: auto auto auto auto repeat(2,minmax(32px,auto) minmax(200px,auto) auto);
  grid-gap: 20px;
}
.span2{
    grid-column: span 2;
}
.contentPic{
  float: left;
  padding-right: 20px;
}
#mePic{
  position:static;
  z-index: -1;
}
.aboutText{
  z-index: 1;
}
#imgGrid{
  display: grid;
  grid-template-columns: auto auto auto;
  grid-template-rows: auto;
  grid-gap: 10px;
}
img{
  max-width: 100%;
}
img:hover{

}
.landscape{
  grid-column: span 2;
}
.portrait{
}
.logo{
  margin-top: 5px;
}
.picContainer{
  text-align: center;
  margin: 20px;
}

